apps/woodpecker/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
  labels:
    name: woodpecker
