apps/woodpecker/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: woodpecker-route
  namespace: woodpecker
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ci.trivernis.dev`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: woodpecker-server
      port: http
